@@ -1,4 +1,5 @@
 HEAD
+    + Allow to specify architecture of base images
     + Added support for 64bit machines
     + Fixed support in yaml for the hw-addr directive that was broken
     + Fixed support in yaml for the bridges and manual-bridging directives
